# fabric-installer

./: .gitignore  .gitmodules  Jenkinsfile  README.md  build.gradle  checkstyle.xml  crowdin.yml  gradle.properties  l4j-manifest.xml  nim.cfg  settings.gradle  wrapper.nim  wrapper.nimble
.github/workflows/: build.yml  release.yml
gradle/wrapper/: gradle-wrapper.properties
native/: build.gradle
native/runtime/: build.gradle
native/runtime/macos/: build.gradle  module.modulemap
native/runtime/windows/: build.gradle
src/main/resources/: Lang_en_US.properties  chorus-16w32b-test.json  en_US.lang  fr_FR.lang  gui.fxml  multimcPatch.json  webView.css
src/main/resources/html/: done.html  error.html  index.html  installing.html  server.html
src/main/resources/lang/: installer.properties  installer_ar_AR.properties  installer_ar_Ar.properties  installer_ar_ar.properties  installer_cs_cz.properties  installer_de_de.properties  installer_el_gr.properties  installer_es_ES.properties  installer_es_ar.properties  installer_et_EE.properties  installer_et_ee.properties  installer_fi_FI.properties  installer_fi_fi.properties  installer_fr_FR.properties  installer_fr_ca.properties  installer_fr_fr.properties  installer_it_it.properties  installer_ja_JP.properties  installer_ja_jp.properties  installer_ko_kr.properties  installer_ms_my.properties  installer_nl_nl.properties  installer_pl_PL.properties  installer_pl_pl.properties  installer_pt_BR.properties  (+11 more)
wrapper/: .gitignore  CMakeLists.txt  README.md
wrapper/src/: InstallerWrapper.cpp  InstallerWrapper.h  main.cpp
(+73 files in other folders)
